--- a/src/app/teacher/teacherlist/teacherlist.component.html
+++ b/src/app/teacher/teacherlist/teacherlist.component.html
@@ -1,1 +1,32 @@
-<p>harsha</p>
+<div class="container d-flex justify-content-center">
+
+    <table class="table text-center  table-success table-striped table-bordered">
+        <thead>
+            <tr class="table-primary">
+                <th>ID</th>
+                <th>NAME</th>
+                <th>CLASS</th>
+                <th>GENDER</th>
+                <th>SUBJECT</th>
+                <th>SECTION</th>
+                <th>MOBILE NUMBER</th>
+                <th>ADDRESS</th>
+                <th>ACTION</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+
+</div>
