--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,10 +26,10 @@
                     <div class="nav-item dropdown mx-5">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img class="my-2" src="../../assets/Rash.jpg" alt="">
+                            <img class="my-2" src="../../assets/user.png" alt="">
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#"><img src="../../assets/Rash.jpg" alt=""><span
+                            <li><a class="dropdown-item" href="#"><img src="../../assets/user.png" alt=""><span
                                         style="font-weight: bold;">CI Infotech</span> <br> <span
                                         class="mx-2 text-secondary">Administrator</span>
                                 </a></li>
