--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -17,13 +17,13 @@
         data-bs-parent="#accordionExample">
         <div class="accordion-body mx-4">
           <ul>
-            <li><a href="">
+            <li><a [routerLink]="['admin']">
                 <h3>Admin Dashboard</h3>
               </a></li>
-            <li> <a href="">
+            <li> <a [routerLink]="['teachDash']">
                 <h3>Teacher Dashboard</h3>
               </a></li>
-            <li> <a href="">
+            <li> <a [routerLink]="['studentDash']">
                 <h3>Student Dashboard</h3>
               </a></li>
           </ul>
