--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -121,15 +121,18 @@
         data-bs-parent="#accordionExample">
         <div class="accordion-body mx-4">
           <ul>
-            <li><a href="">
+            <li><a href="listsubject">
                 <h3>Subject List</h3>
               </a></li>
-            <li> <a href="">
+            <li> <a href="addsubject">
                 <h3>Subject Add</h3>
               </a></li>
-            <li> <a href="">
+            <li> <a href="editsubject">
                 <h3>Subject Edit</h3>
               </a></li>
+
+
+              
           </ul>
         </div>
       </div>
