--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.css
@@ -1,8 +1,9 @@
 .box-1{
     background-color: lightpink;
-    margin-top: 5px;
+    /* margin-top: 5px; */
     border-radius: 30px 0px;
     border:1px solid red;
+    height:100%;
 }
 
 
