--- a/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -8,7 +8,7 @@
     <!-- --------------------------------------------------- -->
     <div class="row">
         <div class="col-md-3">
-            <div class="box-1">
+            <div class="box-1 mt-2">
                 <div class="card-body d-flex justify-content-between">
                     <div class="icon">
                         <i class="fa-sharp fa-solid fa-graduation-cap"></i>
@@ -72,36 +72,23 @@
     <!-- -------------------------------------------------------------- -->
 
     <div class="row">
-        <div class="col-md-6 mt-2">
+        <div class="col-md-6 mt-4">
             <div class="box-2">
                 <div class="card">
                     <h5 class="card-header " ><h1 class="mt-1">Revenue</h1></h5>
-                    <div class="card-body" id="chart">
-                        
-
-                        <div class="card-body">
-
-                            <!-- <apx-chart [series]="series" [chart]="chart" [title]="title"></apx-chart>
-                       -->
-                        </div>
-                    </div>
+                    <div class="card-body" id="chart"> </div>
+                   
                 </div>
             </div>
 
         </div>
 
-        <div class="col-md-6 mt-2">
+        <div class="col-md-6 mt-4">
             <div class="box-2">
                 <div class="card">
-                    <h5 class="card-header " ><h1 class="mt-1">Numbers of Students</h1></h5>
-                    <div class="card-body">
-
-
-                        <div>
-                            <canvas id="myChart"></canvas>
-                        </div>
-
-                    </div>
+                    <h5 class="card-header " ><h1 class="mt-1">Number of Students</h1></h5>
+                    <div class="card-body" id="chart2"> </div>
+            
                 </div>
             </div>
 
@@ -110,8 +97,8 @@
     <!-- ------------------------------------------------  -->
 
     <div class="row">
-        <div class="col-md-6">
-            <div class="box-3 mt-2">
+        <div class="col-md-6 mt-4">
+            <div class="box-3">
                 <div class="card">
                     <h5 class="card-header table-text">Star Students</h5>
                     <div class="card-body">
@@ -168,7 +155,7 @@
         </div>
 
 
-        <div class="col-md-6 mt-2">
+        <div class="col-md-6 mt-4">
             <div class="box-4">
                 <div class="card">
                     <h5 class="card-header table-text">Student Activity</h5>
@@ -187,7 +174,7 @@
 <!-- ============================================================ -->
 
     <div class="row">
-        <div class="col-md-3 mt-2">
+        <div class="col-md-3 mt-4">
             <div class="box-5 bg-primary">
                 <div class="card-body d-flex justify-content-between">
                     <div class="text-1 ">
@@ -203,7 +190,7 @@
 
         </div>
 
-        <div class="col-md-3 mt-2">
+        <div class="col-md-3 mt-4">
             <div class="box-5 bg-info">
                 <div class="card-body d-flex justify-content-between">
                     <div class="text-1">
@@ -219,7 +206,7 @@
 
         </div>
 
-        <div class="col-md-3 mt-2">
+        <div class="col-md-3 mt-4">
             <div class="box-5 bg-danger">
                 <div class="card-body d-flex justify-content-between">
                     <div class="text-1">
@@ -235,7 +222,7 @@
 
         </div>
 
-        <div class="col-md-3 mt-2">
+        <div class="col-md-3 mt-4">
             <div class="box-5 bg-warning">
                 <div class="card-body d-flex justify-content-between">
                     <div class="text-1">
