--- a/src/app/dashboard/teacher-dashboard/teacher-dashboard.component.css
+++ b/src/app/dashboard/teacher-dashboard/teacher-dashboard.component.css
@@ -3,8 +3,8 @@
     margin-top: 5px;
     border-radius: 30px 0px;
     border:1px solid red;
-    height: 130px;
-    width: 100%;
+    height: 120px;
+    /* width: 100%; */
 }
 
 
