--- a/src/app/dashboard/teacher-dashboard/teacher-dashboard.component.html
+++ b/src/app/dashboard/teacher-dashboard/teacher-dashboard.component.html
@@ -7,7 +7,7 @@
     </div>
     <!-- --------------------------------------------------- -->
     <div class="row">
-        <div class="col-md-6  mt-2">
+        <div class="col-md-3  mt-3">
             <div class="box-1">
                 <div class="card-body d-flex justify-content-between">
                     <div class="icon">
@@ -22,13 +22,13 @@
 
         </div>
 
-        <div class="col-md-6 mt-2">
+        <div class="col-md-3 mt-3">
             <div class="box-1">
                 <div class="card-body d-flex justify-content-between">
                     <div class="icon">
                         <i class="fa-sharp fa-solid fa-graduation-cap"></i>
                     </div>
-                    <div class="text-1">
+                    <div class="text-3">
                         <h3>40/60</h3>
                         <h5>Total Students</h5>
                     </div>
@@ -37,7 +37,7 @@
 
         </div>
 
-        <div class="col-md-6 mt-4">
+        <div class="col-md-3 mt-3">
             <div class="box-1">
                 <div class="card-body d-flex justify-content-between">
                     <div class="icon">
@@ -52,7 +52,7 @@
 
         </div>
 
-        <div class="col-md-6 mt-4">
+        <div class="col-md-3 mt-3">
             <div class="box-1">
                 <div class="card-body d-flex justify-content-between">
                     <div class="icon">
@@ -72,13 +72,13 @@
     <!-- -------------------------------------------------------------- -->
 
     <div class="row">
-        <div class="col-md-8 mt-2">
+        <div class="col-md-6 mt-4">
             <div class="box-2">
                 <div class="card">
                     <h5 class="card-header ">
                         <h1 class="mt-1">Upcoming Lesson</h1>
                     </h5>
-                    <div class="card-body" id="chart">
+                    <div class="card-body" >
                         <table class="table">
 
                             <tbody>
@@ -166,7 +166,7 @@
 
         </div>
 
-        <div class="col-md-4 mt-2">
+        <div class="col-md-3 mt-4">
             <div class="box-2">
                 <div class="card text-center">
                     <div class="card-header">
@@ -194,6 +194,20 @@
                 
             </div>
 
+        </div>
+        <div class="col-md-3 mt-4">
+            <div class="box-3 mt-2">
+                <div class="card">
+                    <h5 class="card-header table-text">Star Students</h5>
+                    <div class="card-body">
+                        <div class="card-body">
+                            <ejs-calendar [value]="">
+            
+                            </ejs-calendar>
+                        </div> 
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- ------------------------------------------------  -->
