--- a/src/app/teacher/teacheredit/teacheredit.component.html
+++ b/src/app/teacher/teacheredit/teacheredit.component.html
@@ -5,7 +5,7 @@
             <h3 class="page-title">Edit Teacher</h3>
             <ul class="breadcrumb">
                <li class="breadcrumb-item"><a href="liststudent">Teacher</a></li>
-               <li class="breadcrumb-item active">Add Teacher</li>
+               <li class="breadcrumb-item active">Edit Teacher</li>
             </ul>
          </div>
       </div>
